--- a/01-cv-portfolio/css/styles.css
+++ b/01-cv-portfolio/css/styles.css
@@ -47,7 +47,7 @@ p { text-align: justify; }
 
 body{background: #000; font-size: 16px; font-family: 'Poppins', serif; width: 100%; height: 100%; margin: 0; font-weight: 400;
 	-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; word-wrap: break-word; 
-	color: #333; }
+	color: #fff; }
 
 h1, h2, h3, h4, h5, h6, p, a, ul, span, li, img, inpot, button{ margin: 0; padding: 0; }
 
@@ -111,7 +111,7 @@ b.max-bold{ font-weight: 700; }
 
 .font-semi-white{ color: #ddd; }
 
-.font-lite-black{ color: #999; }
+.font-lite-black{ color: #000; }
 
 
 /* ---------------------------------
