--- a/01-cv-portfolio/css/styles.css
+++ b/01-cv-portfolio/css/styles.css
@@ -111,7 +111,7 @@ b.max-bold{ font-weight: 700; }
 
 .font-semi-white{ color: #ddd; }
 
-.font-lite-black{ color: #000; }
+.font-lite-black{ color: #fff; }
 
 
 /* ---------------------------------
