--- a/01-cv-portfolio/css/styles.css
+++ b/01-cv-portfolio/css/styles.css
@@ -263,6 +263,22 @@ header .downlad-btn:hover{ -webkit-transform: translateY(-4px); transform: trans
 .radial-progress .progress-title{ position: absolute; top: 50%; left: 50%; width: 100%;
 	letter-spacing: 0; text-align: center; transform: translate(-50%, 15px); color: #777; }
 
+/******************CSS for the Browser Scrollbar Starts Here!******************/
+
+body::-webkit-scrollbar {
+	width: 0.5em;
+}
+ 
+body::-webkit-scrollbar-track {
+  	-webkit-box-shadow: inset 0 0 6px #1c2426;
+}
+ 
+body::-webkit-scrollbar-thumb {
+  	background-color: #015E93;
+  	border-radius: 10px;
+}
+
+/******************CSS for the Browser Scrollbar Ends Here!******************/
 	
 	
 /* ---------------------------------
